--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -1,16 +1,71 @@
 doctype html
 html
     head
+        meta(charset="utf-8")
         link(rel="stylesheet", href="styles/main.css")
+        meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1")
+        script(type="text/html" src="https://code.jquery.com/jquery-3.5.1.min.js")
+        //- script(src="libs/jquery-3.5.1.min.js")
+
     body
-    section.header
-        .header__container
-            .header-menu
-                .header-menu__left
-                .header-menu__logo
-                .header-menu__rigth
-            .header-content__column
-                .header-content__title
-                .header-content__subtitle
-                .header-content__btn
-        
+    
+    section.header.container 
+        nav.menu__body
+            //- .menu__icon
+            ul.menu__list
+                li
+                    //- .menu__icon
+                    img(src="../img/Menu_Icon.png", alt="")
+                li Tour
+                li Feature 
+                li Pricing
+            .menu__icon
+            .menua  
+                    ul.menua__list
+                    li
+                    //- .menu__icon
+                    li Tour
+                    li Feature 
+                    li Pricing
+            .header__logo
+                img(src="../img/Logo.png", alt="")
+            .header__link
+                .header__link__help Help
+                .header__link__contacts Contacts
+                .header__btn Get App
+        .header__body-container
+            .header__title What happens tomorrow?
+            .header__subtitle The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his interview with his landlady. His face brightened up, and he began to feel quite convivial.
+            .header__btn-play Watch Video
+            .header__icon
+    section.features.container
+        .features__content
+            .features__container-left
+                img(src="../img/Lock_Icon.png", alt="")
+                .feature__title Real-time all the time
+                .feature__subtitle 
+                    |Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.  
+                    br
+                    |Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.
+            .features__container-rigth
+                img(src="../img/Clock_Icon.png", alt="")
+                .feature__title Adopt without any obstacles
+                .feature__subtitle 
+                    |This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that before!' she said.
+                    br
+                    |This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such abstruse matters.
+    section.iphonefeatures
+        .iphonefeatures__container
+            .iphonefeatures__title.title Your dayis protected
+            .iphonefeatures__subtitle.subtitle 
+                |There have not been any since we have lived here, said my mother. 
+                br
+                |We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones, and the birds have deserted them a long while.
+            .iphonefeatures__btn Try to hack us
+            .iphonefeatures__more Learn more
+            
+    
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
+    script(src="js/script.js")
+
+
