--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -9,35 +9,36 @@ html
 
     body
     
-    section.header.container 
-        nav.menu__body
-            //- .menu__icon
-            ul.menu__list
-                li
-                    //- .menu__icon
-                    img(src="../img/Menu_Icon.png", alt="")
-                li Tour
-                li Feature 
-                li Pricing
-            .menu__icon
-            .menua  
-                    ul.menua__list
+    section.header
+        .container 
+            nav.menu__body
+                //- .menu__icon
+                ul.menu__list
                     li
-                    //- .menu__icon
+                        //- .menu__icon
+                        img(src="../img/Menu_Icon.png", alt="")
                     li Tour
                     li Feature 
                     li Pricing
-            .header__logo
-                img(src="../img/Logo.png", alt="")
-            .header__link
-                .header__link__help Help
-                .header__link__contacts Contacts
-                .header__btn Get App
-        .header__body-container
-            .header__title What happens tomorrow?
-            .header__subtitle The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his interview with his landlady. His face brightened up, and he began to feel quite convivial.
-            .header__btn-play Watch Video
-            .header__icon
+                .menu__icon
+                .menua  
+                        ul.menua__list
+                        li
+                        //- .menu__icon
+                        li Tour
+                        li Feature 
+                        li Pricing
+                .header__logo
+                    img(src="../img/Logo.png", alt="")
+                .header__link
+                    .header__link__help Help
+                    .header__link__contacts Contacts
+                    .header__btn Get App
+            .header__body-container
+                .header__title What happens tomorrow?
+                .header__subtitle The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his interview with his landlady. His face brightened up, and he began to feel quite convivial.
+                .header__btn-play Watch Video
+                .header__icon
     section.features.container
         .features__content
             .features__container-left
@@ -45,21 +46,21 @@ html
                 .feature__title Real-time all the time
                 .feature__subtitle 
                     |Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.  
-                    br
+                    p
                     |Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.
             .features__container-rigth
                 img(src="../img/Clock_Icon.png", alt="")
                 .feature__title Adopt without any obstacles
                 .feature__subtitle 
                     |This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that before!' she said.
-                    br
+                    p
                     |This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such abstruse matters.
     section.iphonefeatures
         .iphonefeatures__container
             .iphonefeatures__title.title Your dayis protected
             .iphonefeatures__subtitle.subtitle 
                 |There have not been any since we have lived here, said my mother. 
-                br
+                p
                 |We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones, and the birds have deserted them a long while.
             .iphonefeatures__btn Try to hack us
             .iphonefeatures__more Learn more
