--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -4,33 +4,31 @@ html
         meta(charset="utf-8")
         link(rel="stylesheet", href="styles/main.css")
         meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1")
-        script(type="text/html" src="https://code.jquery.com/jquery-3.5.1.min.js")
+        //- script(type="text/html" src="https://code.jquery.com/jquery-3.5.1.min.js")
         //- script(src="libs/jquery-3.5.1.min.js")
-
     body
     
     section.header
         .container 
             nav.menu__body
-                //- .menu__icon
+                .com
+                    button.knop 
+                    .dropdown-menu
+                        p Tour
+                        p Feature 
+                        p Pricing
                 ul.menu__list
-                    li
-                        //- .menu__icon
-                        img(src="../img/Menu_Icon.png", alt="")
+                    img(src="../img/Menu_Icon.png", alt="")
                     li Tour
                     li Feature 
                     li Pricing
-                .menu__icon
-                .menua  
-                        ul.menua__list
-                        li
-                        //- .menu__icon
-                        li Tour
-                        li Feature 
-                        li Pricing
                 .header__logo
                     img(src="../img/Logo.png", alt="")
                 .header__link
+                .com
+                    button.knop2
+                    .dropdown-menu2
+                    //- img(src="../img/plus.png", alt="")
                     .header__link__help Help
                     .header__link__contacts Contacts
                     .header__btn Get App
@@ -57,16 +55,165 @@ html
                     |This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such abstruse matters.
     section.iphonefeatures
         .iphonefeatures__container
-            .iphonefeatures__title.title Your dayis protected
-            .iphonefeatures__subtitle.subtitle 
-                |There have not been any since we have lived here, said my mother. 
-                p
-                |We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones, and the birds have deserted them a long while.
-            .iphonefeatures__btn Try to hack us
-            .iphonefeatures__more Learn more
-            
+            img(src="../img/iPhone.png", alt="")
+            .iphonefeatures__column
+                .iphonefeatures__title Your dayis protected
+                .iphonefeatures__subtitle.subtitle 
+                    |There have not been any since we have lived here, said my mother. 
+                    p
+                    |We thought - Mr. Copperfield thought - it was quite a large rookery; but the nests were very old ones, and the birds have deserted them a long while.
+                .iphonefeatures__container-row
+                    .iphonefeatures__btn Try to hack us
+                    .iphonefeatures__more Learn more
+    section.partners
+        .container
+            .partners__container-col
+                .partners__title.title We are almost everywhere
+                .partners__subtitle.subtitle
+                    |Now the races of these two have been for some ages utterly extinct, and besides to discourse any further of them would not be at all to my purpose.
+                    p
+                    |Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.
+                .partners__title-parthners Partners
+                .partners__icon
+    section.iphonescreens
+        .iphonescreens__container
+            .iphonescreens__title.title Beautiful Interface
+            .iphonescreens__line
+            .iphonescreens__screen Landing Screen 
+        .iphonescreens__block
+            img(src="../img/Screen_1.png", alt="")
+            img(src="../img/Screen_2.png", alt="")
+            img(src="../img/Screen_3.png", alt="")
+            img(src="../img/Screen_4.png", alt="")
+            img(src="../img/Screen_5.png", alt="")
+    section.readytobuy
+        .container
+            .readytobuy__column
+                .readytobuy__logo 
+                    span(value="New") New
+                    span(value="Providence") Providence
+                .readytobuy__title Get it to your smartphone 
+                .readytobuy__send-invite
+                    input.subscribe__mail(type="placeholder" value="denis@getcraftwork.com")
+                    input.subscribe__send(type="submit" value="Send Invite")
+                .readytobuy__download-text or Download From
+                .readytobuy__download-btn
+                    span Download on the
+                    p App Store
+    section.customers.container
+        .customers__row
+            //- img(src="../img/Arrow.png", alt="")
+            img(src="../img/Photo_2.png", alt="Jenna")
+            img(src="../img/Photo.png", alt="Cameron")
+            img(src="../img/Photo_3.png", alt="Lana")
+            //- img(src="../img/Arrow2.png", alt="")
+        .customers__title New Providence is the great UI kit 
+        .customers__subtitle.subtitle “Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.”
+        .customers__stars
+            img(src="../img/Star_Icon.png", alt="")
+            img(src="../img/Star_Icon.png", alt="")
+            img(src="../img/Star_Icon.png", alt="")
+            img(src="../img/Star_Icon.png", alt="")
+            img(src="../img/Star_Icon.png", alt="")
+        .customers__name Cameron Dowman
+  
+    section.plan
+        .container.plan__container-row
+            .plan__container-left
+                .plan__title.title Choose your perfect plan
+                .plan__select-text You are
+                .switch
+                    input(type="checkbox" name="you")
+                .plan__subtitle.subtitle Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.
+                .plan__talk Have a bigger team? 
+                    span.letstalk Let‘s talk
+            .crocant
+                .yourplan
+                    .yourplan__title Starter
+                    .yourplan__icon FREE
+                    .yourplan__subtitle Build your schedule every day
+                    ul.yourplan__list
+                        li.yourplan__feature  Unlimeted events
+                        li.yourplan__feature  Connect Dropbox & Evernote
+                    .yourplan__btn Get started
+                .yourplan_2
+                    .yourplan__title Pro
+                    .yourplan__icon $4.99
+                    .yourplan__subtitle Make your life better
+                    ul.yourplan__list
+                        li.yourplan__feature Unlimeted events
+                        li.yourplan__feature Connect Dropbox & Evernote
+                        li.yourplan__feature Personal Assistant
+                    .yourplan__btn.btn_plan2 Make me a Pro
+    section.subscribe
+        .container.subscribe_container
+            .subscribe__title.title Subscribe our newsletters
+            .subscribe__block
+                input.subscribe__mail(type="placeholder" value="Your e-mail")
+                input.btn-subscribe(type="submit" value="Subscribe")
+            .subscribe__text We promise to never spam you.
+
+    footer.container
+        .footer__container-row
+            .footer__left
+                .footer__logo
+                .footer__text It was some time before he obtained any answer, and the reply, when made, was unpropitious.
+                .footer__appstore-icon
+                ul.footer__social-list
+                    li.footer__social-item 
+                        img(src="../img/Twitter_Icon.png", alt="")
+                    li.footer__social-item 
+                        img(src="../img/Facebook_Icon.png", alt="")
+                    li.footer__social-item 
+                        img(src="../img/Google_Icon.png", alt="")
+                    li.footer__social-item 
+                        img(src="../img/Twitter_Icon.png", alt="")
+                    li.footer__social-item 
+                        img(src="../img/Pinterest_Icon.png", alt="")
+                    li.footer__social-item 
+                        img(src="../img/LinkedIn_Icon.png", alt="")
+            .footer__content
+                .footer__content-item 
+                    span.footer__content-title Learn More
+                    p
+                    |How it works?
+                    p
+                    |Meeting tools
+                    p
+                    |Live striming
+                    p
+                    |Contat method
+                .footer__content-item 
+                    span.footer__content-title About us
+                    p
+                    |About us
+                    p
+                    |Features
+                    p
+                    |Privacy police
+                    p
+                    |Terms & Conditions 
+                .footer__content-item 
+                    span.footer__content-title Support
+                    p
+                    |F.A.Q.
+                    p
+                    |Contact us
+                    p
+                    |Live chat
+                    p
+                    |Phone call
+        .line-bar
+        .footer__copyrights
+            .footer__copyrights-text For more freebies visit: 
+                span.letstalk http://getcraftwork.com
+            .footer__madein Made with Love by
     
+
+
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
-    script(src="js/script.js")
+    script(src="/js/script.js")
+    //- <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.min.js"></script>
+
 
 
