--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -11,12 +11,11 @@ html
     section.header
         .container 
             nav.menu__body
-                .com
-                    button.knop 
-                    .dropdown-menu
-                        p Tour
-                        p Feature 
-                        p Pricing
+                //- button.knop 
+                //- .dropdown-menu
+                    p Tour
+                    p Feature 
+                    p Pricing
                 ul.menu__list
                     img(src="../img/Menu_Icon.png", alt="")
                     li Tour
@@ -25,13 +24,22 @@ html
                 .header__logo
                     img(src="../img/Logo.png", alt="")
                 .header__link
-                .com
-                    button.knop2
-                    .dropdown-menu2
-                    //- img(src="../img/plus.png", alt="")
                     .header__link__help Help
                     .header__link__contacts Contacts
                     .header__btn Get App
+            //- nav.menu__mobile
+                button.knop 
+                .dropdown-menu
+                    p Tour
+                    p Feature 
+                    p Pricing
+                img(src="../img/Logo.png", alt="")
+                button.knop2 
+                .dropdown-menu2
+                    .help Help
+                    .contacts Contacts
+                    .getapp Get App
+                
             .header__body-container
                 .header__title What happens tomorrow?
                 .header__subtitle The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his interview with his landlady. His face brightened up, and he began to feel quite convivial.
@@ -127,7 +135,7 @@ html
                 .plan__subtitle.subtitle Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.
                 .plan__talk Have a bigger team? 
                     span.letstalk Let‘s talk
-            .crocant
+            .plan__yourplan
                 .yourplan
                     .yourplan__title Starter
                     .yourplan__icon FREE
@@ -213,6 +221,8 @@ html
 
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js")
     script(src="/js/script.js")
+
+    
     //- <script type="text/javascript" src="//cdn.jsdelivr.net/gh/kenwheeler/slick@1.9.0/slick/slick.min.js"></script>
 
 
