--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -703,7 +703,7 @@ img[alt="Cameron"]{
 .yourplan_2 > ul {
     margin-bottom: 39px;
 }
-.crocant {
+.plan__yourplan {
     display: flex;
     position: relative;
     width: 670px;
@@ -952,57 +952,133 @@ img[src="../img/plus.png"] {
     width: 10%;
     display: none;
 }
-.com {
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    // margin-top: 20px;
+    // margin-bottom: 20px;
+    color: #26272d;
+    font-family: 'Lato';
+    font-size: 16px;
+    font-weight: bold;
+    top: 0;
+}
+.dropdown-menu2 {
+    display: none;
+
+}
+.menu__mobile {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+.knop {
+    width: 20px;
+    height: 12px;
+    background-image: url(../img/Menu_Icon.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    outline: none;
+    border: none;
+    position: relative;
+}
+.dropdown-menu2 {
     display: none;
 }
 @media (max-width: 1283px) {
     .plan__container-row {
         flex-direction: column;
-}
-.plan__container-left {
-    width: 100%;
-    text-align: center;
-}
-.plan__subtitle {
-    width: 100%;
-}
-.plan__talk {
-    margin-bottom: 20px;
-}
-.footer__left {
-    width: 40%;
-}
-.features__content {
-    flex-direction: column;
-    text-align: center;
-}
-.features__container-left {
-    width: 100%;
-    margin-bottom: 20px;
-}
-.features__container-rigth {
-    width: 100%;
-}
-img[src="../img/Lock_Icon.png"] {
-    margin-bottom: 30px;
-}
-img[src="../img/Clock_Icon.png"] {
-    margin-bottom: 30px;
-}
+    }
+    .plan__container-left {
+        width: 100%;
+        text-align: center;
+    }
+    .plan__subtitle {
+        width: 100%;
+    }
+    .plan__talk {
+        margin-bottom: 20px;
+    }
+    .footer__left {
+        width: 40%;
+    }
+    .features__content {
+        flex-direction: column;
+        text-align: center;
+    }
+    .features__container-left {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .features__container-rigth {
+        width: 100%;
+    }
+    img[src="../img/Lock_Icon.png"] {
+        margin-bottom: 30px;
+    }
+    img[src="../img/Clock_Icon.png"] {
+        margin-bottom: 30px;
+    }
+    img[src="../img/iPhone.png"] {
+        position: static; 
+        display: none;
+    }
+    .iphonefeatures__column {
+        position: static;
+    }
+    .iphonefeatures__subtitle {
+        width: auto;
+    }
+    .header__title {
+        text-align: center;
+    }
+    .iphonefeatures {
+        width: 80%;
+        margin: 0 auto;
+        justify-content: center;
+        text-align: center;
+        padding: 0;
+    }   
+    .iphonefeatures__title {
+        text-align: center;
+        width: auto;
+    }
+    .iphonefeatures__container-row {
+        justify-content: center;
+    }
+    .iphonefeatures__more {
+        margin-right: 0;
+    }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
     .footer__social-list {
         margin-bottom: 30px;
     }
+    .footer__left {
+        width: auto;
+    }
+    .footer__logo {
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+    .footer__text {
+        width: auto;
+    }
+    .footer__social-list {
+        justify-content: center;
+    }
+    .footer__appstore-icon {
+        margin: 0 auto;
+        margin-bottom: 40px;
+    }
+    .footer__container-row, .footer__content {
+        justify-content: center;
+    }
 }
 @media (min-width: 768px) and (max-width: 991px) {
     .menu__list > li {
         display: none;
-    }
-    img[src="../img/plus.png"] {
-        display: block;
-        width: 20px;
-        height: 20px;
     }
     .header__link__help {
         display: none;
@@ -1013,44 +1089,162 @@ img[src="../img/Clock_Icon.png"] {
     .header__btn {
         display: none;
     }
-    .menu__body {
-        // display: none;
-    }
-    .menu__list {
+    img[src="../img/iPhone.png"] {
+        position: static; 
         display: none;
     }
-    .knop {
-        background-image: url(../img/Menu_Icon.png);
-        width: 20px;
-        height: 12px;
-        background-repeat: no-repeat;
-        background-size: contain;
-        border: 0;
-        outline: none;
-        background-color: white;
+    .iphonefeatures__column {
+        position: static;
     }
-    .dropdown-menu {
-        position: absolute;
-        margin-top: 150px;
+    .iphonefeatures__subtitle {
+        width: auto;
     }
-    .dropdown-menu > p {
-        color: #26272d;
-        font-family: 'Lato';
-        font-size: 16px;
-        font-weight: bold;
+    .header__title {
+        text-align: center;
     }
-    .knop2 {
-        background-image: url(../img/plus.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        width: 20px;
-        height: 15px;
-        border: 0;
-        outline: none;
-        background-color: white;
+    .iphonefeatures {
+        width: 80%;
+        margin: 0 auto;
+        justify-content: center;
+        text-align: center;
+        padding: 0;
+    }   
+    .iphonefeatures__title {
+        text-align: center;
+        width: auto;
     }
-    .com {
-        display: block;
+    .iphonefeatures__container-row {
+        justify-content: center;
+    }
+    .iphonefeatures__more {
+        margin-right: 0;
+    }
+    .partners__container-col {
+        text-align: center;
+    }
+    .partners__title {
+        width: auto;
+    }
+    .partners__subtitle {
+        width: auto; 
+    }
+    .partners__icon {
+        margin: 0 auto; 
+    }
+    .iphonefeatures__btn {
+        padding-left: 1px;
+    }
+    .footer__left {
+        width: auto;
+    }
+    .footer__logo {
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+    .footer__text {
+        width: auto;
+    }
+    .footer__social-list {
+        justify-content: center;
+    }
+    .footer__appstore-icon {
+        margin: 0 auto;
+        margin-bottom: 40px;
+    }
+    .footer__container-row, .footer__content {
+        justify-content: center;
+    }
+}
+@media (max-width: 767px) {
+    .menu__list > li {
+        display: none;
+    }
+    .header__link__help {
+        display: none;
+    }
+    .header__link__contacts {
+        display: none;
+    }
+    .header__btn {
+        display: none;
+    }
+    img[src="../img/iPhone.png"] {
+        position: static; 
+        display: none;
+    }
+    .iphonefeatures__column {
+        position: static;
+    }
+    .iphonefeatures__subtitle {
+        width: auto;
+    }
+    .header__title {
+        text-align: center;
+    }
+    .iphonefeatures {
+        width: 80%;
+        margin: 0 auto;
+        justify-content: center;
+        text-align: center;
+        padding: 0;
+    }   
+    .iphonefeatures__title {
+        text-align: center;
+        width: auto;
+    }
+    .iphonefeatures__container-row {
+        justify-content: center;
+    }
+    .iphonefeatures__more {
+        margin-right: 0;
+    }
+    .partners__container-col {
+        text-align: center;
+    }
+    .partners__title {
+        width: auto;
+    }
+    .partners__subtitle {
+        width: auto; 
+    }
+    .partners__icon {
+        margin: 0 auto; 
+    }
+    img[alt=Cameron] {
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .yourplan {
+        position: static;
+    }
+    .yourplan_2 {
+        margin-left: 0;
+    }
+    .plan__yourplan {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .footer__left {
+        width: auto;
+    }
+    .footer__logo {
+        margin: 0 auto;
+        margin-bottom: 10px;
+    }
+    .footer__text {
+        width: auto;
+    }
+    .footer__social-list {
+        justify-content: center;
+    }
+    .footer__appstore-icon {
+        margin: 0 auto;
+        margin-bottom: 40px;
+    }
+    .footer__container-row, .footer__content {
+        justify-content: center;
+    }
+    .iphonefeatures__btn {
+        padding-left: 1px;
     }
 }
