--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -4,8 +4,6 @@ html
         meta(charset="utf-8")
         link(rel="stylesheet", href="styles/main.css")
         meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1")
-        //- script(type="text/html" src="https://code.jquery.com/jquery-3.5.1.min.js")
-        //- script(src="libs/jquery-3.5.1.min.js")
     body
     
     section.header
@@ -17,12 +15,12 @@ html
                     p Feature 
                     p Pricing
                 ul.menu__list
-                    img(src="../img/Menu_Icon.png", alt="")
+                    img(src="./img/Menu_Icon.png", alt="")
                     li Tour
                     li Feature 
                     li Pricing
                 .header__logo
-                    img(src="../img/Logo.png", alt="")
+                    img(src="./img/Logo.png", alt="")
                 .header__link
                     .header__link__help Help
                     .header__link__contacts Contacts
@@ -48,14 +46,14 @@ html
     section.features.container
         .features__content
             .features__container-left
-                img(src="../img/Lock_Icon.png", alt="")
+                img(src="./img/Lock_Icon.png", alt="")
                 .feature__title Real-time all the time
                 .feature__subtitle 
                     |Thus much I thought proper to tell you in relation to yourself, and to the trust I reposed in you.  
                     p
                     |Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.
             .features__container-rigth
-                img(src="../img/Clock_Icon.png", alt="")
+                img(src="./img/Clock_Icon.png", alt="")
                 .feature__title Adopt without any obstacles
                 .feature__subtitle 
                     |This sounded a very good reason, and Alice was quite pleased to know it. 'I never thought of that before!' she said.
@@ -63,7 +61,7 @@ html
                     |This I have produced as a scantling of Jack’s great eloquence and the force of his reasoning upon such abstruse matters.
     section.iphonefeatures
         .iphonefeatures__container
-            img(src="../img/iPhone.png", alt="")
+            img(src="./img/iPhone.png", alt="")
             .iphonefeatures__column
                 .iphonefeatures__title Your dayis protected
                 .iphonefeatures__subtitle.subtitle 
@@ -89,11 +87,11 @@ html
             .iphonescreens__line
             .iphonescreens__screen Landing Screen 
         .iphonescreens__block
-            img(src="../img/Screen_1.png", alt="")
-            img(src="../img/Screen_2.png", alt="")
-            img(src="../img/Screen_3.png", alt="")
-            img(src="../img/Screen_4.png", alt="")
-            img(src="../img/Screen_5.png", alt="")
+            img(src="./img/Screen_1.png", alt="")
+            img(src="./img/Screen_2.png", alt="")
+            img(src="./img/Screen_3.png", alt="")
+            img(src="./img/Screen_4.png", alt="")
+            img(src="./img/Screen_5.png", alt="")
     section.readytobuy
         .container
             .readytobuy__column
@@ -102,7 +100,7 @@ html
                     span(value="Providence") Providence
                 .readytobuy__title Get it to your smartphone 
                 .readytobuy__send-invite
-                    input.subscribe__mail(type="placeholder" value="denis@getcraftwork.com")
+                    input.subscribe__mail(type="text" placeholder="denis@getcraftwork.com")
                     input.subscribe__send(type="submit" value="Send Invite")
                 .readytobuy__download-text or Download From
                 .readytobuy__download-btn
@@ -111,18 +109,18 @@ html
     section.customers.container
         .customers__row
             //- img(src="../img/Arrow.png", alt="")
-            img(src="../img/Photo_2.png", alt="Jenna")
-            img(src="../img/Photo.png", alt="Cameron")
-            img(src="../img/Photo_3.png", alt="Lana")
+            img(src="./img/Photo_2.png", alt="Jenna")
+            img(src="./img/Photo.png", alt="Cameron")
+            img(src="./img/Photo_3.png", alt="Lana")
             //- img(src="../img/Arrow2.png", alt="")
         .customers__title New Providence is the great UI kit 
         .customers__subtitle.subtitle “Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.”
         .customers__stars
-            img(src="../img/Star_Icon.png", alt="")
-            img(src="../img/Star_Icon.png", alt="")
-            img(src="../img/Star_Icon.png", alt="")
-            img(src="../img/Star_Icon.png", alt="")
-            img(src="../img/Star_Icon.png", alt="")
+            img(src="./img/Star_Icon.png", alt="")
+            img(src="./img/Star_Icon.png", alt="")
+            img(src="./img/Star_Icon.png", alt="")
+            img(src="./img/Star_Icon.png", alt="")
+            img(src="./img/Star_Icon.png", alt="")
         .customers__name Cameron Dowman
   
     section.plan
@@ -157,7 +155,7 @@ html
         .container.subscribe_container
             .subscribe__title.title Subscribe our newsletters
             .subscribe__block
-                input.subscribe__mail(type="placeholder" value="Your e-mail")
+                input.subscribe__mail(type="text" placeholder="Your e-mail")
                 input.btn-subscribe(type="submit" value="Subscribe")
             .subscribe__text We promise to never spam you.
 
@@ -169,17 +167,17 @@ html
                 .footer__appstore-icon
                 ul.footer__social-list
                     li.footer__social-item 
-                        img(src="../img/Twitter_Icon.png", alt="")
+                        img(src="./img/Twitter_Icon.png", alt="")
                     li.footer__social-item 
-                        img(src="../img/Facebook_Icon.png", alt="")
+                        img(src="./img/Facebook_Icon.png", alt="")
                     li.footer__social-item 
-                        img(src="../img/Google_Icon.png", alt="")
+                        img(src="./img/Google_Icon.png", alt="")
                     li.footer__social-item 
-                        img(src="../img/Twitter_Icon.png", alt="")
+                        img(src="./img/Twitter_Icon.png", alt="")
                     li.footer__social-item 
-                        img(src="../img/Pinterest_Icon.png", alt="")
+                        img(src="./img/Pinterest_Icon.png", alt="")
                     li.footer__social-item 
-                        img(src="../img/LinkedIn_Icon.png", alt="")
+                        img(src="./img/LinkedIn_Icon.png", alt="")
             .footer__content
                 .footer__content-item 
                     span.footer__content-title Learn More
