--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -399,7 +399,7 @@ img[src="../img/iPhone.png"] {
     height: 568px;
     margin-right: 30px;
 }
-img[src="../img/Screen_3.png"] {
+img[src="./img/Screen_3.png"] {
     width: 369px;
     height: 753px;
 }
@@ -1024,13 +1024,13 @@ img[src="../img/Screen_5.png"] {
     img[src="../img/Clock_Icon.png"] {
         margin-bottom: 30px;
     }
-    img[src="../img/iPhone.png"] {
-        position: static; 
+    img[src="./img/iPhone.png"] {
+        // position: static; 
         display: none;
     }
-    .iphonefeatures__column {
-        position: static;
-    }
+    // .iphonefeatures__column {
+    //     position: static;
+    // }
     .iphonefeatures__subtitle {
         width: auto;
     }
@@ -1053,6 +1053,12 @@ img[src="../img/Screen_5.png"] {
     }
     .iphonefeatures__more {
         margin-right: 0;
+    }
+    .iphonefeatures__container {
+        align-items: center;
+    }
+    .partners {
+        background: none;
     }
 }
 @media (min-width: 992px) and (max-width: 1199px) {
@@ -1079,6 +1085,12 @@ img[src="../img/Screen_5.png"] {
     .footer__container-row, .footer__content {
         justify-content: center;
     }
+    .iphonefeatures__container {
+        align-items: center;
+    }
+    .partners {
+        background: none;
+    }
 }
 @media (min-width: 768px) and (max-width: 991px) {
     .menu__list > li {
@@ -1093,8 +1105,8 @@ img[src="../img/Screen_5.png"] {
     .header__btn {
         display: none;
     }
-    img[src="../img/iPhone.png"] {
-        position: static; 
+    img[src="./img/iPhone.png"] {
+        // position: static; 
         display: none;
     }
     .iphonefeatures__column {
@@ -1113,6 +1125,9 @@ img[src="../img/Screen_5.png"] {
         text-align: center;
         padding: 0;
     }   
+    .iphonefeatures__container {
+        align-items: center;
+    }
     .iphonefeatures__title {
         text-align: center;
         width: auto;
@@ -1158,6 +1173,9 @@ img[src="../img/Screen_5.png"] {
     .footer__container-row, .footer__content {
         justify-content: center;
     }
+    .partners {
+        background: none;
+    }
 }
 @media (max-width: 767px) {
     .menu__list > li {
@@ -1172,8 +1190,8 @@ img[src="../img/Screen_5.png"] {
     .header__btn {
         display: none;
     }
-    img[src="../img/iPhone.png"] {
-        position: static; 
+    img[src="./img/iPhone.png"] {
+        // position: static; 
         display: none;
     }
     .iphonefeatures__column {
@@ -1181,6 +1199,9 @@ img[src="../img/Screen_5.png"] {
     }
     .iphonefeatures__subtitle {
         width: auto;
+    }
+    .iphonefeatures__container {
+        align-items: center;
     }
     .header__title {
         text-align: center;
@@ -1250,5 +1271,8 @@ img[src="../img/Screen_5.png"] {
     }
     .iphonefeatures__btn {
         padding-left: 1px;
+    }
+    .partners {
+        background: none;
     }
 }
