--- a/source/pages/includes/iphonescreens.pug
+++ b/source/pages/includes/iphonescreens.pug
@@ -1,5 +1,6 @@
 section.iphonescreens
     .iphonescreens__container
+        a(name="Tour")
         .iphonescreens__title.title Beautiful Interface
         .iphonescreens__line
         .iphonescreens__subtitle Landing Screen 
