--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -2,19 +2,20 @@ doctype html
 html
     head
         meta(charset="utf-8")
+        title NewProvide
         link(rel="stylesheet", href="styles/main.css")
         meta(name="viewport" content="width=device-width, initial-scale=1, minimum-scale=0.1")
     body
-    include includes/header.pug
-    include includes/features.pug
-    include includes/iphonefeatures.pug
-    include includes/partners.pug
-    include includes/iphonescreens.pug
-    include includes/readytobuy.pug
-    include includes/customers.pug
-    include includes/plan.pug
-    include includes/subscribe.pug
-    include includes/footer.pug
+        include includes/header.pug
+        include includes/features.pug
+        include includes/iphonefeatures.pug
+        include includes/partners.pug
+        include includes/iphonescreens.pug
+        include includes/readytobuy.pug
+        include includes/customers.pug
+        include includes/plan.pug
+        include includes/subscribe.pug
+        include includes/footer.pug
 
 
 
