--- a/source/pages/includes/header.pug
+++ b/source/pages/includes/header.pug
@@ -1,17 +1,36 @@
 section.header
     .header__container.container
         nav.header__menu
+            //- img.header__mobile(src="../img/Menu_Icon.png", alt="")
+            .header__menu-drop
+                ul
+                    li
+                        a(href="#Tour") Tour
+                    li 
+                        a(href="#Feature") Feature 
+                    li 
+                        a(href="#Pricing") Pricing
             ul.header__menu-link
-                img(src="../img/Menu_Icon.png", alt="")
-                li Tour
-                li Feature 
-                li Pricing
+                li
+                    a(href="#Tour") Tour
+                li 
+                    a(href="#Feature") Feature 
+                li 
+                    a(href="#Pricing") Pricing
             .header__logo
                 img(src="../img/Logo.png", alt="")
             .header__link
                 .header__link-help Help
-                .header__link-contacts Contacts
-                .header__btn Get App
+                a.header__link-contacts(href="#Contacts") Contacts
+                a.header__btn(href="#App") Get App
+            .header__menu-drop-left 
+                ul
+                    li
+                        .header__link-help Help
+                    li 
+                        a.header__link-contacts(href="#Contacts") Contacts
+                    li 
+                        a.header__btn(href="#App") Get App
         .header__body
             .header__body-title What happens tomorrow?
             .header__body-subtitle The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his interview with his landlady. His face brightened up, and he began to feel quite convivial.
