--- a/source/pages/includes/readytobuy.pug
+++ b/source/pages/includes/readytobuy.pug
@@ -3,8 +3,8 @@ section.readytobuy
     .container
         .readytobuy__column
             .readytobuy__logo 
-                span(value="New") New
-                span(value="Providence") Providence
+                span(title="New") New
+                span(title="Providence") Providence
             .readytobuy__title Get it to your smartphone 
             .readytobuy__send-invite
                 input.readytobuy__subscribe-mail(type="text" placeholder="denis@getcraftwork.com")
