--- a/source/styles/includes/readytobuy.scss
+++ b/source/styles/includes/readytobuy.scss
@@ -108,12 +108,12 @@
 
         }
 }
-span[value="New"] {
+span[title="New"] {
     font-family: 'Lato-Bold';
     font-weight: bold;
     letter-spacing: 1.2px;
 }
-span[value="Providence"] {
+span[title="Providence"] {
     font-family: "Lato - Regular";
     font-weight: 400;
     letter-spacing: 1.2px;
