--- a/source/styles/includes/customers.scss
+++ b/source/styles/includes/customers.scss
@@ -69,5 +69,8 @@ img[alt="Cameron"]{
         img[alt="Lana"]{
             display: none;
         }
+        .customers{
+            padding: 50px 0 50px;
+        }
     }
 
