--- a/source/styles/includes/footer.scss
+++ b/source/styles/includes/footer.scss
@@ -112,6 +112,7 @@
         }
         &__social-list {
             justify-content: center;
+            margin-bottom: 50px;
         }
     }
         @media (max-width: 768px) {
