--- a/source/styles/includes/iphonefeatures.scss
+++ b/source/styles/includes/iphonefeatures.scss
@@ -108,6 +108,6 @@ img[src="../img/iPhone.png"] {
     }
     @media (max-width: 1024px) {
         .iphonefeatures {
-            padding: 86px 2.5% 42px 2.5%;
+            padding: 0 2.5% 0 2.5%;
         }
     }
