--- a/source/styles/includes/iphonescreens.scss
+++ b/source/styles/includes/iphonescreens.scss
@@ -12,6 +12,11 @@
     &__title {
         margin-bottom: 47px;
     }
+    &__subtitle {
+        font-family: 'Lato';
+        font-size: 16px;
+        font-weight: 400;
+    }
     &__line {
         width: 50px;
         height: 2px;
