--- a/source/pages/includes/header.pug
+++ b/source/pages/includes/header.pug
@@ -1,15 +1,7 @@
 section.header
     .header__container.container
         nav.header__menu
-            //- img.header__mobile(src="../img/Menu_Icon.png", alt="")
-            .header__menu-drop
-                ul
-                    li
-                        a(href="#Tour") Tour
-                    li 
-                        a(href="#Feature") Feature 
-                    li 
-                        a(href="#Pricing") Pricing
+
             ul.header__menu-link
                 li
                     a(href="#Tour") Tour
@@ -17,20 +9,24 @@ section.header
                     a(href="#Feature") Feature 
                 li 
                     a(href="#Pricing") Pricing
+            .dropdown
+                button.dropbtn(onclick="myFunction()")
+                .dropdown-content(id="myDropdown")
+                    a(href="#Tour") Tour
+                    a(href="#Feature") Feature 
+                    a(href="#Pricing") Pricing
             .header__logo
                 img(src="../img/Logo.png", alt="")
+            .dropdown
+                button.dropbtn2(onclick="myFunction2()")
+                .dropdown-contentrigth(id="myDropdownrigth")
+                    a Help
+                    a(href="#Contacts") Contacts
+                    a(href="#App") Get App
             .header__link
-                .header__link-help Help
+                a.header__link-help Help
                 a.header__link-contacts(href="#Contacts") Contacts
                 a.header__btn(href="#App") Get App
-            .header__menu-drop-left 
-                ul
-                    li
-                        .header__link-help Help
-                    li 
-                        a.header__link-contacts(href="#Contacts") Contacts
-                    li 
-                        a.header__btn(href="#App") Get App
         .header__body
             .header__body-title What happens tomorrow?
             .header__body-subtitle The sight of the tumblers restored Bob Sawyer to a degree of equanimity which he had not possessed since his interview with his landlady. His face brightened up, and he began to feel quite convivial.
