--- a/source/styles/includes/readytobuy.scss
+++ b/source/styles/includes/readytobuy.scss
@@ -143,6 +143,9 @@ input[value="Send Invite"] {
         input[value="Send Invite"] {
             width: 95px;
         }
+        .readytobuy {
+        padding: 50px 0 50px;
+        }
     }
 
 
