--- a/source/pages/includes/customers.pug
+++ b/source/pages/includes/customers.pug
@@ -1,9 +1,11 @@
 section.customers
     .container
         .customers__row
+            //- img(src="../img/Arrow.png", alt="prev")
             img(src="../img/Photo_2.png", alt="Jenna")
             img(src="../img/Photo.png", alt="Cameron")
             img(src="../img/Photo_3.png", alt="Lana")
+            //- img(src="../img/Arrow2.png", alt="next")
         .customers__title New Providence is the great UI kit 
         .customers__subtitle.subtitle “Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden door.”
         .customers__stars
