--- a/source/styles/includes/header.scss
+++ b/source/styles/includes/header.scss
@@ -306,6 +306,9 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    width: 132px;
+    height: 42px;
+    text-align: center;
   }
   .dropdown-contentrigth a {
     padding: 12px 16px;
